# toml-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  query_parser.rs
test/: test.rs
